marketing-page quality card text mobile is too small - fixed

--- a/assets/scss/pages/_marketing-signup-responsive.scss
+++ b/assets/scss/pages/_marketing-signup-responsive.scss
@@ -268,9 +268,9 @@
     }
   }
 
-  .quality-card-text {
-    font-size: 1.5vh !important;
-  }
+  //.quality-card-text {
+  //  font-size: 1.5vh !important;
+  //}
 
   // Head section
   .head-section-body {
